--- a/index.html
+++ b/index.html
@@ -49,22 +49,24 @@
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.5/angular.js"></script>
 		<script src="src/slider.component.js"></script>
+		<script src="src/slide.directive.js"></script>
+		<script src="src/app.controller.js"></script>
 
 	</head>
 	<body>
 
-		<div class="container">
+		<div class="container" ng-controller="AppController">
 
-			<div class="controls" ng-init="d = 50;w=320;h=200" ng-cloak>
+			<div class="controls" ng-cloak>
 
 				<div style="margin-bottom: 40px">
-					<slider min="0" max="900" ng-model="d"></slider>
+					<slider min="240" max="900" ng-model="params.d"></slider>
 					<label>Głębokość</label>
 
-					<slider min="0" max="900" ng-model="w"></slider>
+					<slider min="320" max="900" ng-model="params.w"></slider>
 					<label>Szerokość</label>
 
-					<slider min="0" max="900" ng-model="h"></slider>
+					<slider min="200" max="900" ng-model="params.h"></slider>
 					<label>Wysokość</label>
 				</div>
 
@@ -98,334 +100,10 @@
 		<script src="js/controls/OrbitControls.js"></script>
 		<script src="js/Detector.js"></script>
 
-		<script src="elements.js"></script>
-		
-		<script>
+		<script src="https://www.clicktorelease.com/code/THREE.MeshLine/src/THREE.MeshLine.js"></script>
 
-			if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
+		<script src="src/elements.js"></script>
+		<script src="src/renderer.js"></script>
 
-			var camera, scene, renderer,
-			bulbLight, bulbMat, hemiLight,
-			object, loader, stats;
-			var ballMat, cubeMat, floorMat;
-
-			var raycaster = new THREE.Raycaster();
-			var mouse = new THREE.Vector2(),
-				mouseClick = false;
-			var vGroup = new THREE.Group();
-			var hGroup = new THREE.Group();
-			var hoverObject, prevHoverObject;
-
-			// ref for lumens: http://www.power-sure.com/lumens.htm
-			var bulbLuminousPowers = {
-				"110000 lm (1000W)": 110000,
-				"3500 lm (300W)": 3500,
-				"1700 lm (100W)": 1700,
-				"800 lm (60W)": 800,
-				"400 lm (40W)": 400,
-				"180 lm (25W)": 180,
-				"20 lm (4W)": 20,
-				"Off": 0
-			};
-
-			// ref for solar irradiances: https://en.wikipedia.org/wiki/Lux
-			var hemiLuminousIrradiances = {
-				"0.0001 lx (Moonless Night)": 0.0001,
-				"0.002 lx (Night Airglow)": 0.002,
-				"0.5 lx (Full Moon)": 0.5,
-				"3.4 lx (City Twilight)": 3.4,
-				"50 lx (Living Room)": 50,
-				"100 lx (Very Overcast)": 100,
-				"350 lx (Office Room)": 350,
-				"400 lx (Sunrise/Sunset)": 400,
-				"1000 lx (Overcast)": 1000,
-				"18000 lx (Daylight)": 18000,
-				"50000 lx (Direct Sun)": 50000
-			};
-
-			var params = {
-				shadows: true,
-				exposure: 0.65,
-				bulbPower: Object.keys( bulbLuminousPowers )[ 1 ],
-				hemiIrradiance: Object.keys( hemiLuminousIrradiances )[3]
-			};
-
-			const container = document.getElementById( 'preview' );
-			const viewport = {
-				width: container.offsetWidth,
-				height: container.offsetHeight
-			};
-
-			var clock = new THREE.Clock();
-
-			init();
-			animate();
-
-			function init() {
-
-				stats = new Stats();
-				//container.appendChild( stats.dom );
-
-
-				camera = new THREE.PerspectiveCamera( 50, viewport.width / viewport.height, 0.1, 100 );
-				camera.position.set(-1.6, 4.8, 1.6);
-
-				scene = new THREE.Scene();
-				scene.background = new THREE.Color( 0xffffff );
-
-				var bulbGeometry = new THREE.SphereGeometry( 0.02, 16, 8 );
-				bulbLight = new THREE.PointLight( 0xffee88, 1, 100, 2 );
-
-				bulbMat = new THREE.MeshStandardMaterial( {
-					emissive: 0xffffee,
-					emissiveIntensity: 1,
-					color: 0x000000
-				});
-				//bulbLight.add( new THREE.Mesh( bulbGeometry, bulbMat ) );
-				bulbLight.position.set( 0, 2, 0 );
-				bulbLight.castShadow = true;
-				scene.add( bulbLight );
-
-				hemiLight = new THREE.HemisphereLight( 0xddeeff, 0x0f0e0d, 0.02 );
-				scene.add( hemiLight );
-
-				floorMat = new THREE.MeshStandardMaterial( {
-					roughness: 0.8,
-					color: 0xffffff,
-					metalness: 0.2,
-					bumpScale: 0.0005
-				});
-				var textureLoader = new THREE.TextureLoader();
-				textureLoader.load( "textures/hardwood2_diffuse.jpg", function( map ) {
-					map.wrapS = THREE.RepeatWrapping;
-					map.wrapT = THREE.RepeatWrapping;
-					map.anisotropy = 4;
-					map.repeat.set( 10, 24 );
-					floorMat.map = map;
-					floorMat.needsUpdate = true;
-				} );
-				textureLoader.load( "textures/hardwood2_bump.jpg", function( map ) {
-					map.wrapS = THREE.RepeatWrapping;
-					map.wrapT = THREE.RepeatWrapping;
-					map.anisotropy = 4;
-					map.repeat.set( 10, 24 );
-					floorMat.bumpMap = map;
-					floorMat.needsUpdate = true;
-				} );
-				textureLoader.load( "textures/hardwood2_roughness.jpg", function( map ) {
-					map.wrapS = THREE.RepeatWrapping;
-					map.wrapT = THREE.RepeatWrapping;
-					map.anisotropy = 4;
-					map.repeat.set( 10, 24 );
-					floorMat.roughnessMap = map;
-					floorMat.needsUpdate = true;
-				} );
-
-				cubeMat = new THREE.MeshStandardMaterial( {
-					roughness: 0.7,
-					color: 0xffffff,
-					bumpScale: 0.002,
-					metalness: 0.2
-				});
-				textureLoader.load( "textures/brick_diffuse.jpg", function( map ) {
-					map.wrapS = THREE.RepeatWrapping;
-					map.wrapT = THREE.RepeatWrapping;
-					map.anisotropy = 4;
-					map.repeat.set( 1, 1 );
-					cubeMat.map = map;
-					cubeMat.needsUpdate = true;
-				} );
-				textureLoader.load( "textures/brick_bump.jpg", function( map ) {
-					map.wrapS = THREE.RepeatWrapping;
-					map.wrapT = THREE.RepeatWrapping;
-					map.anisotropy = 4;
-					map.repeat.set( 1, 1 );
-					cubeMat.bumpMap = map;
-					cubeMat.needsUpdate = true;
-				} );
-
-				ballMat = new THREE.MeshStandardMaterial( {
-					color: 0xffffff,
-					roughness: 0.5,
-					metalness: 1.0
-				});
-				textureLoader.load( "textures/planets/earth_atmos_2048.jpg", function( map ) {
-					map.anisotropy = 4;
-					ballMat.map = map;
-					ballMat.needsUpdate = true;
-				} );
-				textureLoader.load( "textures/planets/earth_specular_2048.jpg", function( map ) {
-					map.anisotropy = 4;
-					ballMat.metalnessMap = map;
-					ballMat.needsUpdate = true;
-				} );
-
-				var floorGeometry = new THREE.PlaneBufferGeometry( 20, 20 );
-				var floorMesh = new THREE.Mesh( floorGeometry, floorMat );
-				floorMesh.receiveShadow = true;
-				floorMesh.rotation.x = -Math.PI / 2.0;
-				scene.add( floorMesh );
-
-				var ballGeometry = new THREE.SphereGeometry( 0.5, 32, 32 );
-				var ballMesh = new THREE.Mesh( ballGeometry, ballMat );
-				ballMesh.position.set( 1, 0.5, 1 );
-				ballMesh.rotation.y = Math.PI;
-				ballMesh.castShadow = true;
-				//scene.add( ballMesh );
-
-				var boxGeometry = new THREE.BoxGeometry( 0.5, 0.5, 0.5 );
-				var boxMesh = new THREE.Mesh( boxGeometry, cubeMat );
-				boxMesh.position.set( -0.5, 0.25, -1 );
-				boxMesh.castShadow = true;
-				//scene.add( boxMesh );
-
-				var boxMesh2 = new THREE.Mesh( boxGeometry, cubeMat );
-				boxMesh2.position.set( 0, 0.25, -5 );
-				boxMesh2.castShadow = true;
-				//scene.add( boxMesh2 );
-
-				var boxMesh3 = new THREE.Mesh( boxGeometry, cubeMat );
-				boxMesh3.position.set( 7, 0.25, 0 );
-				boxMesh3.castShadow = true;
-				//scene.add( boxMesh3 );
-
-				{
-					elements.material = floorMat;
-					elements.hoverMaterial = Object.assign(floorMat.clone(), {
-						opacity: 0.7,
-						transparent: true
-					});
-					elements.invisibleMaterial = Object.assign(floorMat.clone(), {
-						opacity: 0,
-						transparent: true
-					});
-
-					vGroup.add(elements.A(0, 0, 6) );
-					vGroup.add(elements.A(4, 1, 6) );
-					hGroup.add(elements.B(1, 4) );
-					hGroup.add(elements.B(2, 4) );
-					hGroup.add(elements.B(3, 4) );
-					hGroup.add(elements.B(4, 4) );
-					hGroup.add(elements.B(5, 4) );
-
-					vGroup.position.set( -0.5, 0, -1 );
-					vGroup.scale.set(.01,.01,.01);
-
-					hGroup.position.set( -0.5, 0, -1 );
-					hGroup.scale.set(.01,.01,.01);
-
-					scene.add(vGroup);
-					scene.add(hGroup);
-				}
-
-				renderer = new THREE.WebGLRenderer();
-				renderer.physicallyCorrectLights = true;
-				renderer.gammaInput = true;
-				renderer.gammaOutput = true;
-				renderer.shadowMap.enabled = true;
-				renderer.toneMapping = THREE.ReinhardToneMapping;
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( viewport.width, viewport.height );
-				container.appendChild( renderer.domElement );
-
-
-				var controls = new THREE.OrbitControls( camera, renderer.domElement );
-				controls.maxPolarAngle = 1.13*Math.PI/2; // radians
-				controls.target.set(0,1,0);
-				camera.lookAt(controls.target);
-				window.camera = camera;
-
-				window.addEventListener( 'resize', onWindowResize, false );
-
-
-				/*var gui = new dat.GUI();
-				gui.add( params, 'hemiIrradiance', Object.keys( hemiLuminousIrradiances ) );
-				gui.add( params, 'bulbPower', Object.keys( bulbLuminousPowers ) );
-				gui.add( params, 'exposure', 0, 1 );
-				gui.add( params, 'shadows' );
-				gui.open();*/
-			}
-
-			function onWindowResize() {
-
-				camera.aspect = viewport.width / viewport.height;
-				camera.updateProjectionMatrix();
-
-				renderer.setSize( viewport.width, viewport.height );
-
-			}
-
-			//
-
-			function animate() {
-
-				requestAnimationFrame( animate );
-
-				render();
-
-			}
-
-			var previousShadowMap = false;
-
-			function render() {
-
-				renderer.toneMappingExposure = Math.pow( params.exposure, 5.0 ); // to allow for very bright scenes.
-				renderer.shadowMap.enabled = params.shadows;
-				bulbLight.castShadow = params.shadows;
-				if( params.shadows !== previousShadowMap ) {
-					ballMat.needsUpdate = true;
-					cubeMat.needsUpdate = true;
-					floorMat.needsUpdate = true;
-					previousShadowMap = params.shadows;
-				}
-				bulbLight.power = bulbLuminousPowers[ params.bulbPower ];
-				bulbMat.emissiveIntensity = bulbLight.intensity / Math.pow( 0.02, 2.0 ); // convert from intensity to irradiance at bulb surface
-
-				hemiLight.intensity = hemiLuminousIrradiances[ params.hemiIrradiance ];
-				var time = Date.now() * 0.0005;
-				var delta = clock.getDelta();
-
-				//bulbLight.position.y = Math.cos( time ) * 0.75 + 1.25;
-				bulbLight.position.set(-2,2,2);
-
-				raycaster.setFromCamera(mouse, camera);
-				let intersects = raycaster.intersectObjects(hGroup.children);
-				
-				hoverObject = intersects.length ? intersects[0].object : null;
-				if (hoverObject != prevHoverObject) {
-					if (hoverObject) {
-						hoverObject.material = elements.hoverMaterial;
-					}
-					if (prevHoverObject) {
-						prevHoverObject.material = !prevHoverObject.hidden ? elements.material : elements.invisibleMaterial;
-					}
-				}
-				prevHoverObject = hoverObject;
-
-				if (mouseClick && hoverObject) {
-					console.info(hoverObject);
-					hoverObject.hidden = !hoverObject.hidden;		
-					hoverObject.material = !hoverObject.hidden ? elements.material : elements.invisibleMaterial;
-				}
-
-				renderer.render( scene, camera );
-
-				stats.update();
-				mouseClick = false;
-			}
-
-			function onMouseMove( event ) {
-				mouse.x = ( event.clientX / viewport.width ) * 2 - 1;
-				mouse.y = - ( event.clientY / viewport.height ) * 2 + 1;
-			}			
-
-			function onMouseClick( event ) {
-				mouseClick = true;
-			}
-
-			window.addEventListener('mousemove', onMouseMove, false);
-			window.addEventListener('mousedown', onMouseClick, false);
-
-		</script>
 	</body>
 </html>
