UI improvemtns for mobile view; swapped width with depth

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 			<div class="controls" ng-cloak>
 
-				<div style="margin-bottom: 40px">
+				<div style="margin: 40px 10px 0">
 					<slider min="240" max="900" ng-model="params.d"></slider>
 					<label>Głębokość</label>
 
@@ -84,7 +84,7 @@
 					<label>Tolerancja</label><value>1</value>
 				</fieldset>
 
-				<div class="buttons" style="margin-top: 40px">
+				<div class="buttons">
 					<button ng-click="ctrl.download()">Pobierz</button>
 				</div>
 
