--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
 			<div class="controls" ng-cloak>
 
 				<div style="margin: 40px 10px 0">
-					<slider min="240" max="900" ng-model="params.d"></slider>
+					<slider min="240" max="900" step="10" ng-model="params.d"></slider>
 					<label>Głębokość</label>
 
-					<slider min="320" max="900" ng-model="params.w"></slider>
+					<slider min="320" max="900" step="10" ng-model="params.w"></slider>
 					<label>Szerokość</label>
 
-					<slider min="200" max="900" ng-model="params.h"></slider>
+					<slider min="200" max="900" step="10" ng-model="params.h"></slider>
 					<label>Wysokość</label>
 				</div>
 
